# giui

./: .gitignore  Cargo.toml  README.md
crui-derive/: Cargo.toml
crui-derive/src/: bound.rs  de.rs  dummy.rs  lib.rs  try.rs
crui-derive/src/internals/: ast.rs  attr.rs  mod.rs  receiver.rs  symbol.rs
examples/: common.rs  hello_word.rs  interactive_text.rs  loaded.rs  main.rs  multi_window.rs  rich_text_layout.rs  text_box.rs  text_field.rs  todos.rs
giui-derive/: Cargo.toml
giui-derive/src/: de.rs  dummy.rs  lib.rs
giui-derive/src/internals/: attr.rs  check.rs  symbol.rs
src/: color.rs  context.rs  control.rs  font.rs  graphics.rs  gui.rs  layouts.rs  lib.rs  rect.rs  render.rs  style.rs  style_loader.rs  text.rs  text_layout.rs  time.rs  util.rs  widgets.rs
src/deserialize/: mod.rs  style_loader.rs
src/deserialize/serde/: graphic.rs  mod.rs  test.rs
src/deserialize/serde/graphic/: icon.rs  panel.rs  text.rs  texture.rs
src/deserialize/style_loader/: animated_icon.rs  color.rs  icon.rs  panel.rs  test.rs  text.rs  texture.rs  util.rs
src/gui/: test.rs
src/style_loader/: animated_icon.rs  font_id.rs  icon.rs  panel.rs  test.rs  text.rs  text_style.rs  texture.rs  util.rs
src/text/: editor.rs  layout.rs  shaping.rs
src/text_layout/: shaping_harfbuzz.rs  shaping_simple.rs
src/unicode/: mod.rs
src/widgets/: adapters.rs  button.rs  contextmenu.rs  dropdown.rs  hoverable.rs  interactive_text.rs  list.rs  menu.rs  mod.rs  scrollview.rs  slider.rs  tab.rs  textfield.rs  toggle.rs  window.rs
tests/: random.rs  test.rs
