[package]
name = "giui"
version = "0.1.0"
authors = ["Rodrigo Batista de Moraes <rodrigobatsmoraes@hotmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["./giui-derive"]

[features]

# serde = ["serde", "ron"]
complex_shaping = [ "harfbuzz_rs" ]

[dependencies]

texture-cache = "0.1"
ab_glyph = "0.2"
harfbuzz_rs = { version = "2", optional = true }
unicode-linebreak = "0.1"
unicode-segmentation = "1"
winit = "0.26"
bitflags = "1"
copypasta = "0.7"
serde = { version = "1", features = ["derive"] }
giui-derive = { path = "./giui-derive" }
keyed_priority_queue = "0.3"
log = "0.4"


[dev-dependencies]

image = { version = "0.23", default-features = false, features=["png"] }
rand = { version = "0.8", features = ["small_rng"] }
# sprite-render = { path = "../sprite-render-rs", features=["opengl"] }
sprite-render = { features=["opengl"], git = "https://github.com/Rodrigodd/sprite-render-rs.git", rev = "7d70588bbf31f06150d7f499f315c6e9c8b13c69" }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
ron = "0.6"
env_logger = "0.9.0"
