[package]
name = "giui"
version = "0.1.0"
authors = ["Rodrigo Batista de Moraes <rodrigobatsmoraes@hotmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Rodrigodd/giui"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# For running the example in android
# [[example]]
# name = "main"
# crate-type = ["cdylib"]
# path = "examples/main.rs"

[workspace]
members = ["./giui-derive"]

[features]

# serde = ["serde", "ron"]
complex_shaping = ["harfbuzz_rs"]

[[package.metadata.android.uses_feature]]
opengles_version = [2, 0]

[package.metadata.android.sdk]
min_sdk_version = 23
target_sdk_version = 29
max_sdk_version = 29

[dependencies]

texture-cache = "0.1"
ab_glyph = "0.2"
harfbuzz_rs = { version = "2", optional = true }
unicode-linebreak = "0.1"
unicode-segmentation = "1"
winit = "0.28.7"
bitflags = "1"
copypasta = "0.8"
serde = { version = "1", features = ["derive"] }
giui-derive = { path = "./giui-derive" }
keyed_priority_queue = "0.3"
log = "0.4"
instant = { version = "0.1.12", features = ["wasm-bindgen"] }

[dev-dependencies]

image = { version = "0.23", default-features = false, features = ["png"] }
rand = { version = "0.8", features = ["small_rng"] }
# sprite-render = { path = "../sprite-render-rs", features = ["opengl"] }
sprite-render = { features = [
    "opengl",
], git = "https://github.com/Rodrigodd/sprite-render-rs.git", rev = "b01ea81a36d188bfe6d191ed4cde8f3351c53f5f" }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
ron = "0.6"
env_logger = "0.9.0"
mock_instant = "0.2"


[target.'cfg(target_os = "android")'.dev-dependencies]
ndk-glue = { version = "0.7", features = ["logger"] }
ndk-sys = { version = "0.4" }

[profile.dev.package.image]
opt-level = 3
[profile.dev.package.png]
opt-level = 3
[profile.dev.package.adler32]
opt-level = 3
[profile.dev.package.deflate]
opt-level = 3
